<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Controllers.FragmentControllers.personal.PersonalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/friend_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/personalOperations_PersonBackGround"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_background_red"
                    android:padding="5dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="7.5dp"
                    android:layout_marginTop="7.5dp"
                    android:backgroundTintMode="src_over"
                    app:cardCornerRadius="17.5dp">

                    <ImageView
                        android:id="@+id/personalOperations_imagePerson"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|fill"
                        app:srcCompat="@drawable/denemeresim" />
                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/remainingBudgetTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_remaining_budget" />

                <TextView
                    android:id="@+id/remaining_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir"
                    android:text="2.250,00 TL"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/monthly_saving"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir"
                    android:text="@string/monthly_saving"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5000 TL"
            android:fontFamily="@font/avenir"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/CircularDeterminateProgressBar"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:endColor="#C2185B"
                android:indeterminate="false"
                android:indeterminateOnly="false"
                android:indeterminateTintMode="src_in"
                android:max="360"
                android:minWidth="200dp"
                android:minHeight="50dp"
                android:progress="20"
                android:progressDrawable="@drawable/progressbar_custom"
                android:progressTintMode="multiply"></ProgressBar>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/filter"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="14dp"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir"
                    android:text="@string/expenses"
                    android:textColor="@color/red"
                    android:textSize="24sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_expenses"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir"
                android:text="@string/add_expense"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="6dp">

                <RelativeLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:paddingHorizontal="8dp"
                    android:background="@drawable/shadow_bg_left"
                    android:gravity="center|center_vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/add_expense"
                        android:textColor="@color/grey"
                        android:fontFamily="@font/avenir"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:layout_marginHorizontal="4dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shadow_bg_left"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SpinnerWithoutArrow"
                        android:hint="Tür"
                        android:textColor="@color/red"
                        android:fontFamily="@font/avenir"
                        android:textSize="14sp"
                        android:gravity="center" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="78dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shadow_bg_left"
                    android:layout_marginHorizontal="12dp"
                    android:gravity="center|center_vertical">

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_expense_price"
                        android:textColor="@color/red"
                        android:inputType="number"
                        android:fontFamily="@font/avenir"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:layout_marginHorizontal="4dp" />

                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/add_expense"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/custom_button2"
                android:text="@string/add_expense"
                android:textSize="15sp"
                android:fontFamily="@font/avenir"
                android:textStyle="bold"
                android:contentDescription="@string/add_expense"
                android:elevation="2dp"
                android:gravity="center"
                android:textColor="@color/grey" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>