...
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginVertical="6dp"
    android:id="@+id/expense_linear">

    <RelativeLayout
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:background="@drawable/shadow_bg_left"
...
